--- a/GarageSaleApp.UwpApp/GarageSaleApp.UwpApp.csproj
+++ b/GarageSaleApp.UwpApp/GarageSaleApp.UwpApp.csproj
@@ -95,7 +95,6 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DataAccess\FileGarageSaleEventRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\NavigationService.cs" />
     <Compile Include="ViewModels\DashboardViewModel.cs" />
@@ -138,6 +137,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite">
+      <Version>2.2.1</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.0.1</Version>
     </PackageReference>
@@ -146,6 +148,10 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GarageSaleApp.DataAccess\GarageSaleApp.DataAccess.csproj">
+      <Project>{2f2a575c-9eed-4fbe-a897-d0b49f6cb315}</Project>
+      <Name>GarageSaleApp.DataAccess</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GarageSaleApp.Domain\GarageSaleApp.Domain.csproj">
       <Project>{9863432c-063f-496e-ae1c-8bd5ecff836b}</Project>
       <Name>GarageSaleApp.Domain</Name>
