--- a/GarageSaleApp.UwpApp/GarageSaleApp.UwpApp.csproj
+++ b/GarageSaleApp.UwpApp/GarageSaleApp.UwpApp.csproj
@@ -95,7 +95,6 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DataAccess\FileGarageSaleEventRepository.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -147,6 +146,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite">
+      <Version>2.2.2</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.0.1</Version>
     </PackageReference>
@@ -155,6 +157,10 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GarageSaleApp.DataAccess\GarageSaleApp.DataAccess.csproj">
+      <Project>{7564a4b2-9f23-4caf-8e09-d132669cef18}</Project>
+      <Name>GarageSaleApp.DataAccess</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GarageSaleApp.Domain\GarageSaleApp.Domain.csproj">
       <Project>{9863432c-063f-496e-ae1c-8bd5ecff836b}</Project>
       <Name>GarageSaleApp.Domain</Name>
